--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ node_modules/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore personal data files
+/.env
